# app-migrator-claude

./: CLAUDE.md  OUTPUT.md  README.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-yaml-scanner/: spec.md  tasks.md
specs/001-yaml-scanner/checklists/: requirements.md
specs/002-argocd-yaml-parser/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-argocd-yaml-parser/checklists/: requirements.md
specs/002-argocd-yaml-parser/contracts/: argocd-manifest-schema.json  migration-output-schema.json
src/: __init__.py
src/parser/: __init__.py  batch.py  cli.py  core.py  mapper.py  models.py  validator.py
src/scanner/: __init__.py  cli.py  core.py  filters.py
tests/: conftest.py
tests/fixtures/parser/invalid-manifests/: empty-name.yaml  malformed-syntax.yaml  missing-metadata-name.yaml  missing-source-repourl.yaml  multi-document.yaml  not-argocd.yaml
tests/integration/: test_parser_cli.py  test_permission_errors.py  test_recursive_scan.py  test_single_directory_scan.py
tests/unit/: test_filters.py  test_parser_batch.py  test_parser_core.py  test_parser_mapper.py  test_parser_validator.py  test_scanner_core.py
